# tmatrix

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  conan_provider.cmake  conanfile.txt  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  release-please-config.json
.github/workflows/: build_deploy.yml  on-push-main.yml  on_pull_request.yml  release-please.yml  release_please.yml  tests.yml
MATLAB/: Gtensor.m  T_matrix_porosity.m  T_matrix_porosity_largeloop.m  T_matrix_porosity_noscenarios.m  betadistr.m  betaf.m  calc_C_eff.m  calc_C_eff_visco.m  calc_C_eff_visco_org.m  calc_Kd.m  calc_Kd_eff.m  calc_Kd_uuvv.m  calc_Theta.m  calc_X.m  calc_Z.m  calc_gamma.m  calc_isolated_part.m  calc_pressure.m  calc_rho_eff.m  calc_t.m  calc_td.m  calc_velocity_invQ.m  check_alpha_concentration.m  check_elements_vectors.m  check_for_nan_enteries_connected.m  check_for_nan_enteries_isolated.m  iso_av.m  iso_av_all.m  plot_velocity_frequency _angle.m  plot_velocity_frequency.m  run_t_matrix_porosity.m  run_t_matrix_porosity_ex_normal.m  run_t_matrix_porosity_ex_stiff_porosity.m  set_distribution.m  sort_pore_types.m  velocity_vti_angles.m
doc/: tmatrix_porosity_mex.txt
src/tmatrix/: __init__.pyi
src/tmatrix/src/: TMatrix_porosity.cpp  tmatrix_porosity_mex.cpp
tests/: test_t_matrix.py
